
$Id: ChangeLog,v 1.9 2002-10-30 17:48:41 schwarz Exp $
	
Version 3.7.1	2002-10-30  Diemo Schwarz, Patrice Tisserand

	* Added dynamic shared library building by default (libsdif-3.7.1.so).

	* Added build targets and sdif.spec.in file for source
	  distribution and binary rpm.
		
	* Added support of pkg-config for SDIF library.

	
Version 3.7.0	2002-09-20  Diemo Schwarz  <schwarz@lithium.ircam.fr>

	* Reintroduced 3-field version numbering scheme:
	  - first number:  major version, only gigantic changes
	  - second number: minor version, records changes in API 
			   (added/removed functions, changed prototypes)
	  - third number:  release number, for intermediate releases, 
			   bug fixes, etc. that don't change the API
	
	* Functions added:
	  - SdifFRewind		   rewind file to beginning
	  - SdifFTruncate	   file truncate function
	  - SdifParseSignatureList Parse comma-separated list of signatures
	  - SdifKillSelectElement  now public
	
	* Compilation with g++ configurable with --enable-cpp

	* Changed description types (types/sdiftypes.xml)
	  - added segmentation and midi frame and matrix types
	  - changed definition of matrix data type: 
	    use <datatype>...</datatype> tag around!	
	  -> tdl-version 0.4beta
	
	
Version 3.6	2002-08-05  Axel Roebel  <roebel@kempyang.ircam.fr>

	* Fixed some unwanted redeclarations.

	* SDIF now compiles with g++.

	* Support for replacing a selection.

	* Support for error and warning callbacks.

	
Version 3.5:
	
	* Fixed bugs in preincluded.h and UniversalEnvVar.h (thanks to
	  Kelly Fitz for pointing out the problem).

	* Fixed sdif output bug in sdifextract.

	
Version 3.4:
	
	* Added defines SDIF_VERSION_MAJOR/SDIF_VERSION_MINOR
	  for version indication.
	
	* No more warnings if the number of columns exceeds the number defined 
	  in the types file.
	
	* Minor changes in the default sdiftypes file.

	
Version 3.3:
	
	* Modification of standard SDIF description types initialisation: